# rikulox

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
program/: fib_fun.rlx  fun_hello.rlx  if.rlx  method.rlx  same_local.rlx  scope.rlx
program/bench/: fib.py  fib_fun.rlx
rikulox-ast/: Cargo.toml
rikulox-ast/src/: ast.rs  expr.rs  id.rs  lib.rs  span.rs  stmt.rs  string.rs  token.rs
rikulox-cli/: Cargo.toml
rikulox-cli/src/: lib.rs  main.rs
rikulox-cli/tests/: run_programs.rs
rikulox-gc/: Cargo.toml
rikulox-gc/src/: bitset.rs  gc.rs  lib.rs  list.rs  trace.rs
rikulox-gc/tests/: heap_integration.rs
rikulox-lex/: Cargo.toml
rikulox-lex/src/: lib.rs  scan.rs
rikulox-parse/: Cargo.toml
rikulox-parse/src/: error.rs  parse.rs
rikulox-resolve/: Cargo.toml
rikulox-resolve/src/: error.rs  lib.rs  resolve.rs
rikulox-runtime/: Cargo.toml
rikulox-runtime/src/: error.rs  interp.rs  lib.rs  obj.rs
rikulox-scan/: Cargo.toml
rikulox-scan/src/: error.rs  scan.rs
rikulox-treewalk/: Cargo.toml
rikulox-treewalk/src/: call.rs  env.rs  error.rs  interp.rs  lib.rs  native.rs  obj.rs  value.rs
rikulox-treewalk/src/interp/: tests.rs
rikulox-vm/: Cargo.toml
