[workspace]
members = ["rikulox-ast", "rikulox-parse", "rikulox-runtime", "rikulox-scan", "rikulox-treewalk", "rikulox-vm", "rikulox-cli"]
resolver = "3"

[workspace.package]
authors = ["Riku Tatsumi <riku3dno.1@gmail.com>"]
edition = "2024"
version = "0.1.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pullriku/rikulox"
rust-version = "1.88"
