[workspace]
members = ["rikulox-ast", "rikulox-parse", "rikulox-runtime", "rikulox-lex", "rikulox-treewalk", "rikulox-vm", "rikulox-cli", "rikulox-gc", "rikulox-resolve"]
resolver = "3"

[workspace.package]
authors = ["Riku Tatsumi <riku3dno.1@gmail.com>"]
edition = "2024"
version = "0.1.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pullriku/rikulox"
rust-version = "1.88"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
