[package]
name = "rikulox-cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for RikuLox"

[[bin]]
name = "rikulox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
rikulox-parse = { version = "0.1.0", path = "../rikulox-parse" }
rikulox-lex = { version = "0.1.0", path = "../rikulox-lex" }
rikulox-treewalk = { version = "0.1.0", path = "../rikulox-treewalk" }
rikulox-runtime = { version = "0.1.0", path = "../rikulox-runtime" }
rikulox-resolve = { version = "0.1.0", path = "../rikulox-resolve" }
