[package]
name = "rikulox-scan"
authors.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rikulox-ast = { version = "0.1.0", path = "../rikulox-ast" }
string-interner = "0.19.0"
unicode-ident = "1.0.18"
